--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" data-bg-video="https://www.youtube.com/embed/vO5yet3Ot64?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" data-bg-video="https://www.youtube.com/embed/vO5yet3Ot64?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     
 
@@ -748,6 +748,18 @@
                   </div>
 
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-4i" style="background-color: rgb(0, 0, 0); padding-top: 90px; padding-bottom: 90px;">
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-xs-center">
+                <h3 class="mbr-section-title display-2">SIGA-NOS</h3>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/DoaVSGanha"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/Doa-VS-Ganha-1911819389099756"><i class="socicon socicon-facebook"></i></a> <a class="btn btn-social" title="Google+" target="_blank" href="https://plus.google.com/107760692370029514140"><i class="socicon socicon-googleplus"></i></a> <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/channel/UCfIo5Zx-9AH0nPjkx4p4Vbw"><i class="socicon socicon-youtube"></i></a>       </div>
             </div>
         </div>
     </div>
