--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -220,7 +220,7 @@
                   <h3 class="mbr-section-title display-2">Publicidade é a alma</h3>
                   <div class="lead">
 
-                    <p>Nosso projeto é limitado a &nbsp;inicialmente apenas 5 mil membros. <br>Até alcançarmos nossa meta inicial, foaremos na publicidade online;<br>Nosso pricipal meio de publicidade é nossa <a href="https://www.facebook.com/Doa-VS-Ganha-1911819389099756" target="_blank">Página no Facebook</a>, o valor a ser investido é doado pelos próprios membros como visto no vídeo acima após cada mudança de nível;<br>.<br>50% &nbsp;será investido em campanhas CURTIR PÁGINA<br>50% será investido em campanhas VIEWS POSTAGENS<br></p>
+                    <p>Nosso projeto é limitado inicialmente, apenas 5 mil membros. <br>Até alcançarmos nossa meta inicial, faremos publicidade online;<br>Nosso principal meio de publicidade é nossa <a href="https://www.facebook.com/Doa-VS-Ganha-1911819389099756" target="_blank">Página no Facebook</a>, o valor a ser investido é doado pelos próprios membros como visto no vídeo acima após cada mudança de nível;<br>.<br>50% &nbsp;será investido em campanhas CURTIR PÁGINA<br>50% será investido em campanhas VIEWS POSTAGENS<br></p>
 
                   </div>
 
