--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -102,7 +102,7 @@
                             <h3 class="mbr-section-title display-2">Conheça um pouco sobre nós</h3>
 
                             <div class="mbr-section-text">
-                                <p>SOMOS UM GRUPO EM UM SISTEMA SOMOS DE AJUDA MÚTUA ENTRE AMIGOS... 6 FASES PARA DOAÇÃO EM FORMATO DE FILA ÚNICA... INICIA DOACÃO COM APENAS 10 REAIS... RECEBE NO FINAL FASE 6 MAIS DE 8 MIL REAIS...<br></p>
+                                <p>SOMOS UM GRUPO EM UM SISTEMA DE AJUDA MÚTUA ENTRE AMIGOS... 6 FASES PARA DOAÇÃO EM FORMATO DE FILA ÚNICA... INICIA DOACÃO COM APENAS 10 REAIS... RECEBE NO FINAL FASE 6 MAIS DE 8 MIL REAIS...<br></p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-lg btn-danger-outline btn-danger" href="inicio#header3-20">GANHE 9 REIAS</a></div>
